swapping out temporary password for 1password lookup removing default influxdb database since I'm using multiple DBs

--- a/roles/telegraf/templates/output-influxdb.conf.j2
+++ b/roles/telegraf/templates/output-influxdb.conf.j2
@@ -3,6 +3,6 @@
   database = "telegraf"
   ## HTTP Basic Auth
   username = "telegraf"
-  password = "secretpassword"
+  password = "{{ lookup('onepassword', 'HKRoad Ansible Passwords', section="THOR", field='influxdb telegraf pass') }}"
 
 
