--- a/roles/mkthordocker/templates/docker@.service.j2
+++ b/roles/mkthordocker/templates/docker@.service.j2
@@ -11,18 +11,18 @@ ExecStartPre=-/usr/bin/docker stop %i
 ExecStartPre=-/usr/bin/docker rm %i
 ExecStartPre=/usr/bin/docker pull {{ docker_hub_image }}
 ExecStart=/usr/bin/docker run --rm --name %i \
-  {{ docker_options|indent(width=2) if 'docker_options' is defined }}
-{%- if 'docker_ports' is defined %}
+  {{ docker_options|indent(width=2) if docker_options is defined }}
+{%- if docker_ports is defined %}
 {%- for k,v in docker_ports.items() %}
   -p {{ k }}:{{ v }} \
 {% endfor %}
 {% endif %}
-{%- if 'docker_env' is defined %}
+{%- if docker_env is defined %}
 {%- for k,v in docker_env.items() %}
   -e {{ k }}={{ v }} \
 {% endfor %}
 {% endif %}
-{%- if 'docker_vols' is defined %}
+{%- if docker_vols is defined %}
 {%- for k,v in docker_vols.items() %}
   -v {{ k }}:{{ v }} \
 {% endfor %}
