--- a/roles/mkthordocker/templates/docker@.service.j2
+++ b/roles/mkthordocker/templates/docker@.service.j2
@@ -1,7 +1,8 @@
 [Unit]
 Description={{ description }}
-After=docker.service
-Requires=docker.service{% if lvm is defined %}{% for lvm in lvm %} mnt-{{ lvm.name }}.mount{% endfor %}{% endif %}{{''}}
+After=network-online.target
+Wants=network-online.target
+{% if lvm is defined %}Requires={% for lvm in lvm %} mnt-{{ lvm.name }}.mount{% endfor %}{% endif %}{{''}}
 
 # https://blog.container-solutions.com/running-docker-containers-with-systemd
 [Service]
@@ -11,18 +12,20 @@ ExecStartPre=-/usr/bin/docker stop %i
 ExecStartPre=-/usr/bin/docker rm %i
 ExecStartPre=/usr/bin/docker pull {{ docker_hub_image }}
 ExecStart=/usr/bin/docker run --rm --name %i \
-  {{ docker_options|indent(width=2)+"\n" if docker_options is defined }}
-{%- if docker_ports is defined %}
+{% if docker_options is defined %}
+  {{ docker_options|indent(width=2) }}
+{% endif -%}
+{% if docker_ports is defined %}
 {%- for k,v in docker_ports.items() %}
   -p {{ k }}:{{ v }} \
 {% endfor %}
 {% endif %}
-{%- if docker_env is defined %}
+{% if docker_env is defined %}
 {%- for k,v in docker_env.items() %}
   -e {{ k }}={{ v }} \
 {% endfor %}
 {% endif %}
-{%- if docker_vols is defined %}
+{% if docker_vols is defined %}
 {%- for k,v in docker_vols.items() %}
   -v {{ k }}:{{ v }} \
 {% endfor %}
