--- a/roles/mkthordocker/templates/docker@.service.j2
+++ b/roles/mkthordocker/templates/docker@.service.j2
@@ -2,7 +2,7 @@
 Description={{ description }}
 After=network-online.target
 Wants=network-online.target
-{% if lvm is defined %}Requires={% for lvm in lvm %} mnt-{{ lvm.name }}.mount{% endfor %}{% endif %}{{''}}
+{% if lvm is defined %}RequiresMountsFor={% for lvm in lvm %}/mnt/{{ lvm.name }} {% endfor %}{% endif %}{{''}}
 
 # https://blog.container-solutions.com/running-docker-containers-with-systemd
 [Service]
@@ -14,19 +14,19 @@ ExecStartPre=/usr/bin/docker pull {{ docker_hub_image }}
 ExecStart=/usr/bin/docker run --rm --name %i \
 {% if docker_options is defined %}
   {{ docker_options|indent(width=2) }}
-{% endif -%}
+{% endif %}
 {% if docker_ports is defined %}
-{%- for k,v in docker_ports.items() %}
+{% for k,v in docker_ports.items() %}
   -p {{ k }}:{{ v }} \
 {% endfor %}
 {% endif %}
 {% if docker_env is defined %}
-{%- for k,v in docker_env.items() %}
+{% for k,v in docker_env.items() %}
   -e {{ k }}={{ v }} \
 {% endfor %}
 {% endif %}
 {% if docker_vols is defined %}
-{%- for k,v in docker_vols.items() %}
+{% for k,v in docker_vols.items() %}
   -v {{ k }}:{{ v }} \
 {% endfor %}
 {% endif %}
