--- a/roles/telegraf/templates/inputs-common.conf.j2
+++ b/roles/telegraf/templates/inputs-common.conf.j2
@@ -6,16 +6,14 @@
   endpoint = "unix:///var/run/docker.sock"
 
   ## Set to true to collect Swarm metrics(desired_replicas, running_replicas)
+  ## Note: configure this in one of the manager nodes in a Swarm cluster.
+  ## configuring in multiple Swarm managers results in duplication of metrics.
   gather_services = false
-
-  ## Only collect metrics for these containers, collect all if empty
-  container_names = []
 
   ## Set the source tag for the metrics to the container ID hostname, eg first 12 chars
   source_tag = false
 
-  ## Containers to include and exclude. Globs accepted.
-  ## Note that an empty array for both will include all containers
+  ## Containers to include and exclude. Collect all if empty. Globs accepted.
   container_name_include = []
   container_name_exclude = []
 
@@ -26,23 +24,30 @@
   # container_state_include = []
   # container_state_exclude = []
 
+  ## Objects to include for disk usage query
+  ## Allowed values are "container", "image", "volume"
+  ## When empty disk usage is excluded
+  storage_objects = []
+
   ## Timeout for docker list, info, and stats commands
   timeout = "5s"
 
-  ## Whether to report for each container per-device blkio (8:0, 8:1...) and
-  ## network (eth0, eth1, ...) stats or not
-  perdevice = true
+  ## Specifies for which classes a per-device metric should be issued
+  ## Possible values are 'cpu' (cpu0, cpu1, ...), 'blkio' (8:0, 8:1, ...) and 'network' (eth0, eth1, ...)
+  # perdevice_include = ["cpu"]
 
-  ## Whether to report for each container total blkio and network stats or not
-  total = false
-
-  ## Which environment variables should we use as a tag
-  ##tag_env = ["JAVA_HOME", "HEAP_SIZE"]
+  ## Specifies for which classes a total metric should be issued. Total is an aggregated of the 'perdevice_include' values.
+  ## Possible values are 'cpu', 'blkio' and 'network'
+  ## Total 'cpu' is reported directly by Docker daemon, and 'network' and 'blkio' totals are aggregated by this plugin.
+  # total_include = ["cpu", "blkio", "network"]
 
   ## docker labels to include and exclude as tags.  Globs accepted.
   ## Note that an empty array for both will include all labels as tags
   docker_label_include = []
   docker_label_exclude = []
+
+  ## Which environment variables should we use as a tag
+  tag_env = ["JAVA_HOME", "HEAP_SIZE"]
 
   ## Optional TLS Config
   # tls_ca = "/etc/telegraf/ca.pem"
